perf(user): judge a whole set of deny subjects with one actor resolution
Every caller of the lift ceiling has a SET: a role replace dropping
several roles, a group's delegations changing, a group plus the roles it
delegates. Each asked per subject, and each question re-derived the actor
and re-hydrated their entire effective authority set — roles,
group-delegated roles, the inheritance DAG and their own denies. Eight
roles meant paying that eight times for one decision.

The batch reads every subject's rows in one query and resolves the actor
once; only reach and the per-row provenance still vary. Subjects carrying
no denies are dropped before anything is resolved, which preserves the
existing rule that an empty set authorizes nothing and so needs no actor.
The single-subject entries stay as thin wrappers over it, so there is one
decision rather than two that have to agree.

Mutation-checking found the gap this shape invites: allMatch -> anyMatch
across subjects left the suite green, because every batch test used
subjects with the SAME verdict and a uniform batch cannot tell the two
apart. Now there is one with opposite verdicts, plus the liftable subject
asserted alone so the refusal is provably the peer's and not a broken
fixture.